# wireforge-core

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  server.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: feedback.md
.github/workflows/: ci.yml  publish.yml  release.yml
crates/wf-bitmap/: Cargo.toml
crates/wf-bitmap/src/: lib.rs
crates/wf-bitmap/tests/: iso8583_bitmap.rs
crates/wf-cli/: Cargo.toml
crates/wf-cli/src/: lib.rs  main.rs
crates/wf-cli/tests/: address_check.rs  cli_roundtrip.rs  ebcdic_sm3.rs  layout_check.rs  oracle_check.rs  xform_diff.rs
crates/wf-codec/: Cargo.toml  build.rs
crates/wf-codec/src/: lib.rs
crates/wf-codec/src/ebcdic/: mod.rs
crates/wf-codec/src/iso8583/: bcd.rs  builder.rs  dialect.rs  field.rs  mod.rs  parser.rs  spec.rs
crates/wf-codec/src/swift/: mod.rs
crates/wf-codec/src/swift/fields/: field_20.rs  field_32a.rs  field_50k.rs  mod.rs  registry.rs
crates/wf-codec/tables/: cp037.txt  cp500.txt
crates/wf-codec/tests/: ai_baseline.rs  iso8583_dialect.rs  iso8583_field.rs  iso8583_message.rs  iso8583_spec.rs  parse_accuracy.rs  roundtrip_proptest.proptest-regressions  roundtrip_proptest.rs  swift_semantic.rs  swift_structure.rs
crates/wf-format/: Cargo.toml
crates/wf-format/examples/: iso8583-auth.wf  iso8583-oracle.wf  mt-mx-pair.wf  mt103-skeleton.wf
crates/wf-format/src/: ast.rs  lexer.rs  lib.rs  pair.rs  parser.rs  writer.rs
crates/wf-format/tests/: dsl_grammar.rs  roundtrip_proptest.proptest-regressions  roundtrip_proptest.rs
crates/wf-mcp/: Cargo.toml
crates/wf-mcp/src/: hex.rs  lib.rs
crates/wf-mcp/src/tools/: address_compliance.rs  address_scan.rs  build.rs  diff.rs  ebcdic_decode.rs  explain.rs  field.rs  mod.rs  mt_mx_diff.rs  mti.rs  parse.rs  sm3.rs  swift_parse.rs  validate.rs
crates/wf-mx/: Cargo.toml
crates/wf-mx/src/: lib.rs
crates/wf-obs/: Cargo.toml
crates/wf-obs/src/: lib.rs
crates/wf-oracle/: Cargo.toml
crates/wf-oracle/src/: fixed.rs  iso8583.rs  lib.rs  mask.rs  verdict.rs  wire.rs
crates/wf-oracle/tests/: fixed_conformance.rs  iso8583_conformance.rs
crates/wf-sm/: Cargo.toml
crates/wf-sm/src/: lib.rs  sm2.rs  sm3.rs  sm4.rs
crates/wf-sm/tests/: sm3_throughput.rs
crates/wf-swift/: Cargo.toml
crates/wf-swift/src/: lib.rs
crates/wf-wal/: Cargo.toml
crates/wf-wal/src/: lib.rs
crates/wf-wal/tests/: wal_recovery.rs
crates/wf-xform/: Cargo.toml
crates/wf-xform/src/: address.rs  lib.rs
crates/wf-xform/tests/: address_compliance.rs  golden_corpus.rs  maxlen_pin.rs
docs/: ai-baseline-2026-Q2.md  conformance-report.md  mcp-integration.md  parse-accuracy-baseline-2026-Q2.md  process.md  sample-acquisition-2026-05-20.md  sample-policy.md  sm-crypto-research-2026-05.md  user-guide.md
docs/blog/: debugging-iso8583-tigerbeetle.md
docs/distribution/: anthropics-financial-services-PR-draft.md  discussions-sample-call-pinned.md  hermes-agent-PR-draft.md  hn-show-hn-draft.md  mcp-registry-submission.md  publish-runbook.md  reddit-r-payments-draft.md  reddit-r-programming-draft.md  tigerbeetle-discord-post.md
docs/strategy/: next-steps-2026-06.md
docs/warp-workflows/: PR-draft.md  build-iso8583.yaml  parse-iso8583-json.yaml  parse-iso8583.yaml  validate-iso8583.yaml
mcpb/: assemble-release-mcpb.sh  build-mcpb.sh  manifest.json
samples/: .gitignore
samples/synthetic/iso8583/: 0200-auth-request.hex  0200-auth-request.json  0210-auth-response.hex  0210-auth-response.json  0800-network-mgmt.hex  0800-network-mgmt.json  README.md
tools/: sample-fetch.sh
tools/sample-sanitize/: Cargo.toml  README.md
tools/sample-sanitize/src/: lib.rs  main.rs  meta.rs  sanitize.rs
