[package]
name = "wf-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Financial message codec: ISO 8583, SWIFT MT, EBCDIC."

[lints]
workspace = true

[dependencies]
wf-bitmap = { path = "../wf-bitmap", version = "0.0.1" }
