[package]
name = "wf-obs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Wireforge observability helpers: leveled logging, raw-buffer hex dumps, and stderr subscriber setup over the tracing facade."
keywords = ["observability", "logging", "tracing", "hexdump", "fintech"]
categories = ["development-tools::debugging"]

[lints]
workspace = true

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
